vlib/v/parser/tests/division_by_zero_float_var_err.vv
fn main() {
	a := 0.0
	println(1.0/a)
}
